iac/gitops/argocd/self-service/workloads/backend/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: self-service-backend
  name: self-service-backend
  namespace: self-service
spec:
  selector:
    matchLabels:
      app: self-service-backend
  template:
    metadata:
      labels:
        app: self-service-backend
    spec:
      containers:
      - image: gabrielmadrid/self-service-backend:latest
        name: self-service-backend
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: self-service-backend
  name: self-service-backend
  namespace: self-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: self-service-backend
  type: ClusterIP

---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: self-service-backend
  namespace: self-service
spec:
  gateways:
    - self-service-gateway
  hosts:
  - api.cloudburger.com.br
  http:
  - name: self-service-backend
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: self-service-backend
